--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Trebuchet";
+  src: url("/public/fonts/trebuc.woff") format("woff");
+}
+
+@font-face {
+  font-family: "TStarProBold";
+  src: url("/public/fonts/TStarProBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "TStarProHeavy";
+  src: url("/public/fonts/TStarProHeavy.woff") format("woff");
+}
+
+@font-face {
+  font-family: "TStarProMedium";
+  src: url("/public/fonts/TStarProMedium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "TStarProRegular";
+  src: url("/public/fonts/TStarProRegular.woff") format("woff");
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
+  --font-trebuchet-regular: "Trebuchet";
+  --font-tstar-pro-bold: "TStarProBold";
+  --font-tstar-pro-heavy: "TStarProHeavy";
+  --font-tstar-pro-medium: "TStarProMedium";
+  --font-tstar-pro-regular: "TStarProRegular";
+}
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -12,7 +49,7 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
