--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,8 @@ html {
 }
 
 :root {
+  --background: #ffffff;
+  --foreground: #171717;
   --font-trebuchet-regular: "Trebuchet";
   --font-tstar-pro-bold: "TStarProBold";
   --font-tstar-pro-heavy: "TStarProHeavy";
@@ -54,7 +56,7 @@ html {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 @layer utilities {
