--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,7 +55,7 @@ html {
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: var(--foreground);
   /* font-family: Arial, Helvetica, sans-serif; */
 }
 
